# LogSquirl

./: .gitignore  AppImageBuilder.yml  BUILD.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  NOTICE  README.md  SECURITY.md  latest.json
.github/: copilot-instructions.md
.github/actions/agent-build/: action.yml
.github/actions/agent-package-mac/: action.yml
.github/actions/agent-package-win/: action.yml
.github/actions/agent-run-tests/: action.yml
.github/actions/agent-setup/: action.yml
.github/actions/docker-build/: action.yml
.github/actions/docker-package/: action.yml
.github/actions/docker-run-tests/: action.yml
.github/actions/logsquirl-version/: action.yml
.github/actions/prepare-workspace-env/: action.yml
.github/workflows/: ci-build.yml  ci-docker.yml  ci-release.yml  codeql-analysis.yml
Resources/: logsquirl.icns
cmake/: MacOSXBundleInfo.plist.in  TranslationUtils.cmake  generate_version_h.cmake
docker/fedora43/: Dockerfile
docker/oracle10/: Dockerfile  epel.repo
docker/ubuntu22.04/: Dockerfile
docker/ubuntu24.04/: Dockerfile
packaging/: description.txt
packaging/linux/: deb  logsquirl.desktop  rpm
packaging/linux/appimage/: generate_appimage.sh
packaging/linux/arch/: .SRCINFO  PKGBUILD
packaging/linux/gentoo/: logsquirl-22.06.0.1289.ebuild  logsquirl-26.03.0.ebuild
packaging/osx/: DS_Store  distribution.xml  dmg_background.tif  dmg_setup.scpt  entitlements.plist
packaging/windows/: 7z_logsquirl_listfile.txt  7z_pdb_listfile.txt  logsquirl.nsi  prepare_release.cmd
packaging/windows/chocolatey/: logsquirl.nuspec
packaging/windows/chocolatey/tools/: chocolateyInstall.ps1
packaging/windows/scoop/: logsquirl.json
scripts/: fix_macos_frameworks.sh  gen_changelog.py  release_stats.py
src/: CMakeLists.txt
src/app/: CMakeLists.txt  cli.h  logsquirl.qrc  logsquirl_grep.cpp  logsquirlapp.h  main.cpp  messagereceiver.h
src/app/i18n/: en.ts  zh_CN.ts  zh_TW.ts
src/crash_handler/: CMakeLists.txt
src/crash_handler/include/: crashhandler.h  issuereporter.h  memory_info.h
src/crash_handler/src/: crashhandler.cpp  issuereporter.cpp  memory_info.cpp
src/filewatch/: CMakeLists.txt
src/filewatch/include/: filewatcher.h
src/filewatch/src/: filewatcher.cpp
src/logdata/: CMakeLists.txt
src/logdata/include/: abstractlogdata.h  compressedlinestorage.h  encodingdetector.h  filedigest.h  linepositionarray.h  linetypes.h  logdata.h  logdataoperation.h  logdataworker.h  logfiltereddata.h  logfiltereddataworker.h  readablesize.h
src/logdata/src/: abstractlogdata.cpp  compressedlinestorage.cpp  encodingdetector.cpp  filedigest.cpp  fileholder.cpp  logdata.cpp  logdataoperation.cpp  logdataworker.cpp  logfiltereddata.cpp  logfiltereddataworker.cpp  readablesize.cpp
src/logging/: CMakeLists.txt
src/logging/include/: log.h  logger.h
src/logging/src/: logger.cpp
src/logsquirl_version/: CMakeLists.txt
src/logsquirl_version/include/: logsquirl_version.h
src/logsquirl_version/src/: logsquirl_version.cpp
src/regex/: CMakeLists.txt
src/regex/include/: booleanevaluator.h  hsregularexpression.h  regularexpression.h  regularexpressionpattern.h
src/regex/src/: booleanevaluator.cpp  hsregularexpression.cpp  regularexpression.cpp
src/settings/: CMakeLists.txt
src/settings/include/: configuration.h  persistable.h  persistentinfo.h  shortcuts.h  styles.h
src/settings/src/: configuration.cpp  persistentinfo.cpp  shortcuts.cpp  styles.cpp
src/ui/: CMakeLists.txt
src/ui/include/: abstractlogview.h  chipmunkimporter.h  colorlabelsmanager.h  crawlerwidget.h  decompressor.h  displayfilepath.h  downloader.h  encodings.h  favoritefiles.h  filteredview.h  filterspanel.h  fontutils.h  highlightedmatch.h  highlighteredit.h  highlightersdialog.h  highlightersdialog.ui  highlighterset.h  highlightersetedit.h  highlightersetedit.ui  highlightersmenu.h  iconloader.h  infoline.h  jwtdecoder.h  logmainview.h  mainwindow.h  mainwindowtext.h  menu.h  optionsdialog.h  optionsdialog.ui  overview.h  pathline.h  predefinedfilters.h  predefinedfilterscombobox.h  predefinedfiltersdialog.h  predefinedfiltersdialog.ui  quickfind.h  quickfindpattern.h  quickfindwidget.h  scratchpad.h  selection.h  (+4 more)
src/ui/src/: abstractlogview.cpp  colorlabelsmanager.cpp  crawlerwidget.cpp  decompressor.cpp  displayfilepath.cpp  downloader.cpp  favoritefiles.cpp  filteredview.cpp  filterspanel.cpp  highlighteredit.cpp  highlightersdialog.cpp  highlighterset.cpp  highlightersetedit.cpp  infoline.cpp  logmainview.cpp  mainwindow.cpp  mainwindowtext.cpp  optionsdialog.cpp  overview.cpp  pathline.cpp  predefinedfilters.cpp  predefinedfilterscombobox.cpp  predefinedfiltersdialog.cpp  quickfind.cpp  quickfindpattern.cpp  quickfindwidget.cpp  recentfiles.cpp  scratchpad.cpp  selection.cpp  session.cpp  tabbedscratchpad.cpp  tabnamemapping.cpp
src/utils/: CMakeLists.txt
src/utils/include/: active_screen.h  atomicflag.h  clipboard.h  containers.h  cpu_info.h  crc32.h  dispatch_to.h  openfilehelper.h  overload_visitor.h  perfcounter.h  progress.h  resourcewrapper.h  runnable_lambda.h  synchronization.h  uuid.h
src/utils/src/: cpu_info.cpp
src/versioncheck/: CMakeLists.txt
src/versioncheck/include/: versionchecker.h
src/versioncheck/src/: versionchecker.cpp
tests/: CMakeLists.txt
tests/helpers/: CMakeLists.txt  file_write_helper.cpp  file_write_helper.h
tests/ui/: CMakeLists.txt  crawlerwidget_test.cpp  logdata_test.cpp  logfiltereddata_test.cpp  mainwindow_test.cpp  qtests_main.cpp
tests/unit/: CMakeLists.txt  chipmunkimporter_test.cpp  configuration_test.cpp  encodingdetector_test.cpp  jwtdecoder_test.cpp  linepositionarray_test.cpp  linetypes_test.cpp  patternmatcher_test.cpp  regularexpression_test.cpp  tests_main.cpp
website/: config.toml
website/content/: _index.md
website/content/archive/: release_1.1.3-r1.md  release_17.12.md  release_19.12_preview.md  release_19.2.md  release_19.9.md  release_20.1_preview.md  release_20.4.md  release_20.9_preview.md
website/content/docs/legal_notice/: _index.md
(+9 files in other folders)
